# agentguard-os

./: CHANGELOG.md  Cargo.toml  README.md  plan.md
.agents/rules/: security-rules.md
.agents/workflows/: execution-workflow.md
guard-proxy/: Cargo.toml
guard-proxy/src/: lib.rs
guard-runner/: Cargo.toml
guard-runner/src/: main.rs
guard-sandbox/: Cargo.toml
guard-sandbox/src/: main.rs
sandbox_workspace/tmp/: agent_output.txt
