[package]
name = "guard-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "20.0.0"
wasmtime-wasi = "20.0.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
guard-proxy = { path = "../guard-proxy" }
